fix: white gap/render issue

--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,8 @@
 
 
 
-
-.no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none;    /* Firefox */
+/* Hide scrollbar for Chrome, Safari, and Edge */
+html {
+  scrollbar-width: none; /* For Firefox */
 }
 
-.no-scrollbar::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera */
-}
